...

@implementation ThirdPartyNoticesViewController

- (void)viewDidLoad {
    [super viewDidLoad];

    self.title = @"Licenses and Source";

    UITextView *textView = [[UITextView alloc] initWithFrame:CGRectZero];
    textView.translatesAutoresizingMaskIntoConstraints = NO;
    textView.editable = NO;
    textView.selectable = YES;
    textView.alwaysBounceVertical = YES;
    textView.font = [UIFont preferredFontForTextStyle:UIFontTextStyleBody];
    textView.adjustsFontForContentSizeCategory = YES;
    textView.textContainerInset = UIEdgeInsetsMake(16, 12, 16, 12);
    textView.accessibilityIdentifier = @"third-party-notices-text";

    if (@available(iOS 13.0, *)) {
        self.view.backgroundColor = UIColor.systemBackgroundColor;
        textView.backgroundColor = UIColor.systemBackgroundColor;
        textView.textColor = UIColor.labelColor;
    } else {
...
